--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -1,52 +1,10 @@
-.body {
-  font-family: Times New Roman, serif;
-  font-size: 16px;
-  color: #555555;
-}
-
-h1 {
-font-family: Helvetica Neu, sans-serif;
-  font-size: 36px;
-  color: #180428;
-}
-
-h2 {
-font-family: Helvetica Neu, sans-serif;
-  font-size: 32px;
-  color: #270b3d;
-}
-
-h3 {
-font-family: Helvetica Neu, sans-serif;
-  font-size: 28px;
-  color: #270b3d;
-}
-
-h4 {
-font-family: Helvetica Neu, sans-serif;
-  font-size: 24px;
-  color: #270b3d;
-}
-
-h5 {
-font-family: Helvetica Neu, sans-serif;
-  font-size: 20px;
-  color: #270b3d;
-}
-
-h6 {
-font-family: Helvetica Neu, sans-serif;
-  font-size: 12px;
-  color: #270b3d;
-}
-
 .margins {
     margin-left: auto;
     margin-right: auto;
     width: 70%;
   }
 
-  .text-center {
+  .post-meta {
     text-align: center;
   }
 
