--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -35,6 +35,7 @@ font-family: Helvetica Neu, sans-serif;
   font-size: 36px;
   font-weight: bold;
   text-transform: uppercase;
+  line-height: 1em;
   color: #ee6677;
 }
 
@@ -42,6 +43,7 @@ h2 {
 font-family: Helvetica Neu, sans-serif;
   font-size: 32px;
   font-weight: normal;
+  line-height: 1em;
   color: #0B232F;
 }
 
@@ -49,6 +51,7 @@ h3 {
 font-family: Helvetica Neu, sans-serif;
   font-size: 28px;
   font-weight: normal;
+  line-height: 1em;
   color: #0B232F;
 }
 
@@ -56,6 +59,7 @@ h4 {
 font-family: Helvetica Neu, sans-serif;
   font-size: 24px;
   font-weight: normal;
+  line-height: 1em;
   color: #0B232F;
 }
 
@@ -63,12 +67,14 @@ h5 {
 font-family: Helvetica Neu, sans-serif;
   font-size: 20px;
   font-weight: normal;
+  line-height: 1em;
   color: #0B232F;
 }
 
 h6 {
 font-family: Helvetica Neu, sans-serif;
   font-size: 12px;
+  line-height: 1em;
   color: #0B232F;
 }
 
