Reduce size and opacity of background image

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -17,7 +17,7 @@ a,a:link,a:visited {
 
 /* Begin background image styling*/
 body {
-  background-image: url(https://unsplash.imgix.net/photo-1414005987108-a6d06de8769f?q=75&fm=jpg&s=b37798a9dbd0c8884af2261b518970e3);
+  background-image: url(https://raw.githubusercontent.com/mjschindler/mjschindler.github.io/master/images/golden%20gate%20bridge%2020%25%20opacity.png);
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
