Update blockquote style

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -242,3 +242,13 @@ figcaption {
 }
 
 /* End figure styling */
+
+/* Begin blockquote styling */
+
+blockquote {
+font-style: italic;
+border-left: 5px solid #7F8383;
+padding: 0.5em 10px;
+}
+
+/* End blockquote styling */
