--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -5,6 +5,7 @@ body {
   line-height: 1.5em;
   font-size: 16px;
   color: #F0E5ED;
+  clear: both;
 }
 
 a,a:link,a:visited {
@@ -111,8 +112,8 @@ font-family: Helvetica Neu, sans-serif;
 
       nav ul {
         font-family: Helvetica Neu, sans-serif;
-        font-size: 18px;
-        float: right;
+        font-size: 14px;
+       float: right;
         margin: 0 0 3em 0;
         padding: 0;
         list-style: none;
@@ -121,7 +122,6 @@ font-family: Helvetica Neu, sans-serif;
       nav li {
         display:inline-block;
         padding: 1em;
-        float: right;
       }
 
       nav li a {
