--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -15,3 +15,9 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+article {
+    background:rgba(255,255,255,0.5);
+    padding: 2em;
+    border-radius: 10px;
+}
