change nav hover color

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -129,7 +129,7 @@ font-family: Helvetica Neu, sans-serif;
     }
 
       nav li a:hover {
-      color: #3E91A6;
+      color: #ee6677;
     }
 
 /* End NEW navigation bar styling. */
