--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -5,7 +5,6 @@ body {
   line-height: 1.5em;
   font-size: 16px;
   color: #0B232F;
-  clear: both;
 }
 
 a,a:link,a:visited {
@@ -97,7 +96,7 @@ font-family: Helvetica Neu, sans-serif;
 }
 
 /* Begin logo/header Styling */
-   #title h5 {
+   #title h1 {
       float: left;
       margin: 0 0 3em 0;
       padding: 1em;
@@ -106,6 +105,7 @@ font-family: Helvetica Neu, sans-serif;
     #title a {
       text-decoration: none;
     }
+
    /* End logo/header styling. */
 
   /* Begin NEW navigation bar styling. */
@@ -113,7 +113,7 @@ font-family: Helvetica Neu, sans-serif;
       nav ul {
         font-family: Helvetica Neu, sans-serif;
         font-size: 14px;
-       float: right;
+        float: right;
         margin: 0 0 3em 0;
         padding: 0;
         list-style: none;
@@ -252,3 +252,13 @@ padding: 0.5em 10px;
 }
 
 /* End blockquote styling */
+
+    header {
+      display: block;
+      height: 100px;
+    }
+
+    body {
+      display: block;
+      /*clear: both;*/
+    }
